refactor(tweetService): 替换stream.toList为Collectors.toList
修复Java版本兼容性问题，将stream的toList方法替换为Collectors.toList以兼容更低版本JDK